test/negative/001_unrecognized_char.fx
// expect: unrecognized character
val a = 1 $ 2
println(a)
