test/negative/001_unrecognized_char.err
001_unrecognized_char.fx:2:11: error: unrecognized character '$'
